--- a/index.html
+++ b/index.html
@@ -9,14 +9,83 @@
   <meta name="keywords" content="HTML5, CSS3, Acessibilidade, Web Design, Web Development, Web Forms, Forms">
   <meta name="author" content="FJRM - Felipe Rodrigues">
   <meta name="theme-color" content="#">
-  <meta property="og:title" content="#">
+  <meta property="og:title" content="FCC: Survey Form">
   <meta property="og:type" content="website">
-  <title>#</title>
+  <title>FCC: Survey Form</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
+  <main>
+    <div class="wrapper">
+      <header class="header">
+        <h1 id="title" class="text-center">freeCodeCamp Survey Form</h1>
+        <p id="description" class="description text-center">Thank you for taking the time to help us improve the platform</p>
+      </header>
+      <form id="survey-form">
+        <div class="form-group">
+          <label id="name-label" for="name">Name</label>
+          <input type="text" id="name" class="form-control" placeholder="Enter your name" required>
+        </div>
+        <div class="form-group">
+          <label id="email-label" for="email">Email</label>
+          <input type="email" id="email" class="form-control" placeholder="Enter your Email" required>
+        </div>
+        <div class="form-group">
+          <label id="number-label" for="number">Age<span class="clue">(optional)</span></label>
+          <input type="number" name="age" id="number" min="10" max="99" class="form-control" placeholder="Age">
+        </div>
+        <div class="form-group">
+          <p>Which option best describes your current role?</p>
+          <select id="dropdown" name="role" class="form-control" required>
+            <option disabled selected value>Select current role</option>
+            <option value="student">Student</option>
+            <option value="job">Full Time Job</option>
+            <option value="learner">Full Time Learner</option>
+            <option value="preferNo">Prefer not to say</option>
+            <option value="other">Other</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <p>Would you recommend freeCodeCamp to a friend?</p>
+          <label><input type="radio" value="definitely" name="user-recommend" class="input-radio" checked>Definitely</label>
+          <label><input type="radio" value="maybe" name="user-recommend" class="input-radio">Maybe</label>
+          <label><input type="radio" value="not-sure" name="user-recommend" class="input-radio">Not sure</label>
+        </div>
+        <div class="form-group">
+          <p>What is your favorite feature of freeCodeCamp?</p>
+          <select name="mostLike" id="most-like" class="form-control" required>
+            <option disabled selected value>Select an option</option>
+            <option value="challenges">Challenges</option>
+            <option value="projects">Projects</option>
+            <option value="community">Community</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <p>What would you like to see improved? <span class="clue">(Check all that apply)</span></p>
+          <label><input type="checkbox" name="prefer" class="input-checkbox" value="front-end-projects">Front-end Projects</label>
+          <label><input type="checkbox" name="prefer" class="input-checkbox" value="front-end-projects">Front-end Projects</label>
+          <label><input type="checkbox" name="prefer" class="input-checkbox" value="back-end-projects">Back-end Projects</label>
+          <label><input type="checkbox" name="prefer" class="input-checkbox" value="data-visualization">Data Visualization</label>
+          <label><input type="checkbox" name="prefer" class="input-checkbox" value="challenges">Challenges</label>
+          <label><input type="checkbox" name="prefer" class="input-checkbox" value="open-source-community">Open Source Community</label>
+          <label><input type="checkbox" name="prefer" class="input-checkbox" value="gitter-help-rooms">Gitter help rooms</label>
+          <label><input type="checkbox" name="prefer" class="input-checkbox" value="videos">Videos</label>
+          <label><input type="checkbox" name="prefer" class="input-checkbox" value="city-meetups">City Meetups</label>
+          <label><input type="checkbox" name="prefer" class="input-checkbox" value="wiki">Wiki</label>
+          <label><input type="checkbox" name="prefer" class="input-checkbox" value="forum">Forum</label>
+          <label><input type="checkbox" name="prefer" class="input-checkbox" value="additional-courses">Additional Courses</label>
+        </div>
+        <div class="form-group">
+          <p>Any comments or suggestions?</p>
+          <textarea name="comment" id="comments" class="input-textarea" placeholder="Enter your comment here..."></textarea>
+        </div>
+        <div class="form-group">
+          <button type="submit" id="submit" class="submit-button">Submit</button>
+        </div>
+      </form>
+    </div>
+  </main>
 </body>
 
 </html>
